WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283429
Inline `TextTrack::invalidateTrackIndex`
https://bugs.webkit.org/show_bug.cgi?id=283429
Summary
Inline `TextTrack::invalidateTrackIndex`
Tim Nguyen (:ntim)
Reported
2024-11-20 10:19:43 PST
Silence some smart pointer errors. See
https://github.com/WebKit/WebKit/pull/34778
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-20 10:51:04 PST
<
rdar://problem/140287648
>
Tim Nguyen (:ntim)
Comment 2
2024-11-20 10:55:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36908
EWS
Comment 3
2024-11-20 11:49:18 PST
Committed
286866@main
(b1dd9328b1de): <
https://commits.webkit.org/286866@main
> Reviewed commits have been landed. Closing PR #36908 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug