Inline `TextTrack::invalidateTrackIndex` https://bugs.webkit.org/show_bug.cgi?id=283429 rdar://140287648

Reviewed by Ryosuke Niwa and Chris Dumez.

Silence some smart pointer errors with unified sources shifting around. See https://github.com/WebKit/WebKit/pull/34778

* Source/WebCore/html/track/TextTrack.cpp:
(WebCore::TextTrack::invalidateTrackIndex): Deleted.
* Source/WebCore/html/track/TextTrack.h:
(WebCore::TextTrack::invalidateTrackIndex):

Canonical link: https://commits.webkit.org/286866@main